manifests/base/gateway/infra-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    networking.gke.io/deletion-protection: "true"
  finalizers:
  - spirit-in-physics.gftd.ai/deletion-protection
  labels:
    app.kubernetes.io/managed-by: timoni
    app.kubernetes.io/name: infra
    app.kubernetes.io/version: 0.0.0-devel
  name: infra-gateway
  namespace: spirit-in-physics
spec:
  gatewayClassName: envoy
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: sip.junkawasaki.com
    name: http-0
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: sip.junkawasaki.com
    name: https-0
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: sip-tls-cert
      mode: Terminate
