manifests/base/gateway/infra-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-https-redirect
  namespace: spirit-in-physics
spec:
  hostnames:
  - sip.junkawasaki.com
  parentRefs:
  - name: infra-gateway
    namespace: spirit-in-physics
    sectionName: http-0
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
