manifests/base/gateway/researcher-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: researcher-route
  namespace: spirit-in-physics
spec:
  hostnames:
  - researcher.spirit-in-physics.com
  parentRefs:
  - name: infra-gateway
    namespace: spirit-in-physics
    sectionName: https-0
  rules:
  - backendRefs:
    - name: researcher
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
